# ridal

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  codecov.yml  default.nix  flake.nix  pyproject.toml  shell.nix  steps.md  test_ridal.py  test_ridal_interface.py  upgrade_notes.md
.github/workflows/: pre-commit.yml  python-build.yml  python.yml  release.yml  rust.yml
scripts/: check_steps_md.py  render_kroppbreen.py
src/: cli.rs  coords.rs  dem.rs  export.rs  formats.rs  gpr.rs  io.rs  lib.rs  main.rs  metadata.rs  tools.rs  user_metadata.rs
src/filters/: coordinates.rs  mod.rs
