[package]
name = "ridal"
version = "0.5.0"
edition = "2021"
readme = "README.md"
description="Speeding up Ground Penetrating Radar (GPR) processing"
license-file="LICENSE"
repository="https://github.com/erikmannerfelt/ridal"

authors = ["Erik Schytt Mannerfelt"]

[lib]
name = "ridal_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ridal"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.28.3", optional = true}
numpy = { version = "0.28", optional = true }
ndarray = "0.17"   # For base ndarrays
ndarray-stats = "0.7"  # For ndarray statistics
chrono = "0.4"  # Convert timestamps to seconds before epoch
image = "0.24"  # Write images
smartcore = "0.3"  # (Linear) regression packages
noisy_float = "0.2"  # For inputs to ndarray-stats
rayon = "1.10"  # For parallelization of functions
clap = { version = "4.5", features = ["derive"] }
geomorph = "2.0" # UTM zone conversion functions
utm = "0.1"  # More UTM zone conversion functions
glob = "0.3"
parse_duration = "2.1"
num = "0.4"
num-complex = "0.4"
enterpolation = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
netcdf = { version = "0.12", features = ["ndarray"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
netcdf = { version = "0.12", features = ["ndarray", "static"] }



[dev-dependencies]
tempfile = "3.5.0"
temp-env = "0.3.6"
serial_test = "3.2.0"
approx = "0.5.0"
test_retry = "0.1.0"

[features]
default = ["cli", "python"]
cli = []
python = ["pyo3", "numpy"]
