[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ridal"
requires-python = ">=3.8"
dynamic = ["version", "description", "authors", "license", "urls"]
readme = "README.md"
dependencies = ["numpy"]

[project.optional-dependencies]
full = ["xarray"]

[tool.maturin]
# Bindings type
bindings = "pyo3"
features = ["python"]
default-features = false
